// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SingleImageView permalink preview should render with permalink styling if in permalink 1`] = `
<div
  className="file-view--single image-permalink"
>
  <div
    className="file__image"
  >
    <div
      className="image-header image-header--expanded"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none single-image-view__toggle"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      >
        <MenuDownIcon
          color="currentColor"
          size={16}
        />
      </button>
    </div>
    <div
      className="image-container image-permalink image-container--small"
      data-expanded={true}
      style={
        Object {
          "minHeight": 50,
          "minWidth": 50,
        }
      }
    >
      <div
        className="image-loaded image-permalink"
        style={Object {}}
      >
        <injectIntl(SizeAwareImage)
          className=" single-image-view__image"
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          enablePublicLink={false}
          fileInfo={
            Object {
              "archived": false,
              "channel_id": "channel_id",
              "clientId": "client_id",
              "create_at": 1,
              "delete_at": 1,
              "extension": "jpg",
              "has_preview_image": true,
              "height": 200,
              "id": "file_info_id",
              "mime_type": "mime_type",
              "name": "name",
              "size": 1,
              "update_at": 1,
              "user_id": "user_id",
              "width": 350,
            }
          }
          fileURL="/api/v4/files/file_info_id"
          getFilePublicLink={[Function]}
          handleSmallImageContainer={true}
          minContainerSize={50}
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          smallImageThreshold={216}
          src="/api/v4/files/file_info_id/preview"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot 1`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-header image-header--expanded"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none single-image-view__toggle"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      >
        <MenuDownIcon
          color="currentColor"
          size={16}
        />
      </button>
    </div>
    <div
      className="image-container image-container--small"
      data-expanded={true}
      style={
        Object {
          "minHeight": 50,
          "minWidth": 50,
        }
      }
    >
      <div
        className="image-loaded"
        style={Object {}}
      >
        <injectIntl(SizeAwareImage)
          className=" single-image-view__image"
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          enablePublicLink={false}
          fileInfo={
            Object {
              "archived": false,
              "channel_id": "channel_id",
              "clientId": "client_id",
              "create_at": 1,
              "delete_at": 1,
              "extension": "jpg",
              "has_preview_image": true,
              "height": 200,
              "id": "file_info_id",
              "mime_type": "mime_type",
              "name": "name",
              "size": 1,
              "update_at": 1,
              "user_id": "user_id",
              "width": 350,
            }
          }
          fileURL="/api/v4/files/file_info_id"
          getFilePublicLink={[Function]}
          handleSmallImageContainer={true}
          minContainerSize={50}
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          smallImageThreshold={216}
          src="/api/v4/files/file_info_id/preview"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot 2`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-header image-header--expanded"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none single-image-view__toggle"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      >
        <MenuDownIcon
          color="currentColor"
          size={16}
        />
      </button>
    </div>
    <div
      className="image-container image-container--small"
      data-expanded={true}
      style={
        Object {
          "minHeight": 50,
          "minWidth": 50,
        }
      }
    >
      <div
        className="image-loaded image-fade-in"
        style={Object {}}
      >
        <injectIntl(SizeAwareImage)
          className=" single-image-view__image"
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          enablePublicLink={false}
          fileInfo={
            Object {
              "archived": false,
              "channel_id": "channel_id",
              "clientId": "client_id",
              "create_at": 1,
              "delete_at": 1,
              "extension": "jpg",
              "has_preview_image": true,
              "height": 200,
              "id": "file_info_id",
              "mime_type": "mime_type",
              "name": "name",
              "size": 1,
              "update_at": 1,
              "user_id": "user_id",
              "width": 350,
            }
          }
          fileURL="/api/v4/files/file_info_id"
          getFilePublicLink={[Function]}
          handleSmallImageContainer={true}
          minContainerSize={50}
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          smallImageThreshold={216}
          src="/api/v4/files/file_info_id/preview"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 1`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-header image-header--expanded"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none single-image-view__toggle"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      >
        <MenuDownIcon
          color="currentColor"
          size={16}
        />
      </button>
    </div>
    <div
      className="image-container image-container--small"
      data-expanded={true}
      style={
        Object {
          "minHeight": 50,
          "minWidth": 50,
        }
      }
    >
      <div
        className="image-loaded svg"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <injectIntl(SizeAwareImage)
          className=" single-image-view__image"
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          enablePublicLink={false}
          fileInfo={
            Object {
              "archived": false,
              "channel_id": "channel_id",
              "clientId": "client_id",
              "create_at": 1,
              "delete_at": 1,
              "extension": "svg",
              "has_preview_image": true,
              "height": 200,
              "id": "svg_file_info_id",
              "mime_type": "mime_type",
              "name": "name_svg",
              "size": 1,
              "update_at": 1,
              "user_id": "user_id",
              "width": 350,
            }
          }
          fileURL="/api/v4/files/svg_file_info_id"
          getFilePublicLink={[Function]}
          handleSmallImageContainer={true}
          minContainerSize={50}
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          smallImageThreshold={216}
          src="/api/v4/files/svg_file_info_id/preview"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 2`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-header image-header--expanded"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none single-image-view__toggle"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      >
        <MenuDownIcon
          color="currentColor"
          size={16}
        />
      </button>
    </div>
    <div
      className="image-container image-container--small"
      data-expanded={true}
      style={
        Object {
          "minHeight": 50,
          "minWidth": 50,
        }
      }
    >
      <div
        className="image-loaded image-fade-in svg"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <injectIntl(SizeAwareImage)
          className=" single-image-view__image"
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          enablePublicLink={false}
          fileInfo={
            Object {
              "archived": false,
              "channel_id": "channel_id",
              "clientId": "client_id",
              "create_at": 1,
              "delete_at": 1,
              "extension": "svg",
              "has_preview_image": true,
              "height": 200,
              "id": "svg_file_info_id",
              "mime_type": "mime_type",
              "name": "name_svg",
              "size": 1,
              "update_at": 1,
              "user_id": "user_id",
              "width": 350,
            }
          }
          fileURL="/api/v4/files/svg_file_info_id"
          getFilePublicLink={[Function]}
          handleSmallImageContainer={true}
          minContainerSize={50}
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          smallImageThreshold={216}
          src="/api/v4/files/svg_file_info_id/preview"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should set loaded state on callback of onImageLoaded on SizeAwareImage component 1`] = `
<div
  className="file-view--single"
>
  <div
    className="file__image"
  >
    <div
      className="image-header image-header--expanded"
    >
      <button
        aria-label="Toggle Embed Visibility"
        className="style--none single-image-view__toggle"
        data-expanded={true}
        key="toggle"
        onClick={[Function]}
      >
        <MenuDownIcon
          color="currentColor"
          size={16}
        />
      </button>
    </div>
    <div
      className="image-container image-container--small"
      data-expanded={true}
      style={
        Object {
          "minHeight": 50,
          "minWidth": 50,
        }
      }
    >
      <div
        className="image-loaded image-fade-in"
        style={Object {}}
      >
        <injectIntl(SizeAwareImage)
          className=" single-image-view__image"
          dimensions={
            Object {
              "height": 200,
              "width": 350,
            }
          }
          enablePublicLink={false}
          fileInfo={
            Object {
              "archived": false,
              "channel_id": "channel_id",
              "clientId": "client_id",
              "create_at": 1,
              "delete_at": 1,
              "extension": "jpg",
              "has_preview_image": true,
              "height": 200,
              "id": "file_info_id",
              "mime_type": "mime_type",
              "name": "name",
              "size": 1,
              "update_at": 1,
              "user_id": "user_id",
              "width": 350,
            }
          }
          fileURL="/api/v4/files/file_info_id"
          getFilePublicLink={[Function]}
          handleSmallImageContainer={true}
          minContainerSize={50}
          onClick={[Function]}
          onImageLoaded={[Function]}
          showLoader={true}
          smallImageThreshold={216}
          src="/api/v4/files/file_info_id/preview"
        />
      </div>
    </div>
  </div>
</div>
`;
